forecast control date bugfix, enhancing templates
